# Handwritten-Digits-Recognition

./: Makefile  README.md  dockerfile  pyproject.toml  requirements.txt
notebooks/: 00_quickstart.ipynb
src/handwritten_digits/: __init__.py  config.py  data.py  evaluate.py  model.py  predict.py  serve.py  train.py  utils.py
tests/: conftest.py  test_data.py  test_model_forward.py
